src/abonent-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: abonentnpservice-srv
spec:
  type: NodePort
  selector:
    app: abonentservice
  ports:
    - name: abonentservice
      protocol: TCP
      port: 80
      targetPort: 80
