src/informal-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: informal-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: informaldocumentservice
  template:
    metadata:
      labels:
        app: informaldocumentservice
    spec:
      containers:
        - name: informaldocumentservice
          image: ghostanx/informaldocumentservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: informaldocuments-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: informaldocumentservice
  ports:
  - name: informaldocumentservice
    protocol: TCP
    port: 80
    targetPort: 80
