src/informal-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: informalnpservice-srv
spec:
  type: NodePort
  selector:
    app: informaldocumentservice
  ports:
    - name: informaldocumentservice
      protocol: TCP
      port: 80
      targetPort: 80
