src/invoice-app-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoiceappservice-srv
spec:
  type: NodePort
  selector:
    app: invoiceappservice
  ports:
    - name: invoiceappservice
      protocol: TCP
      port: 80
      targetPort: 80
