src/invoice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoicexmlapi
  template:
    metadata:
      labels:
        app: invoicexmlapi
    spec:
      containers:
        - name: invoicexmlapi
          image: ghostanx/invoicexmlapi:latest
---
apiVersion: v1
kind: Service
metadata:
  name: invoicexmlapi-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: invoicexmlapi
  ports:
  - name: invoicexmlapi
    protocol: TCP
    port: 80
    targetPort: 80
