src/invoice-dom-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoicedomservice-srv
spec:
  type: NodePort
  selector:
    app: invoicedomservice
  ports:
    - name: invoicedomservice
      protocol: TCP
      port: 80
      targetPort: 80
