src/invoice-infr-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoiceinfrservice-srv
spec:
  type: NodePort
  selector:
    app: invoiceinfrservice
  ports:
    - name: invoiceinfrservice
      protocol: TCP
      port: 80
      targetPort: 80
