src/invoice-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoicenpservice-srv
spec:
  type: NodePort
  selector:
    app: invoicexmlapi
  ports:
    - name: invoicexmlapi
      protocol: TCP
      port: 80
      targetPort: 80
